# ELEC5550

./: CMakeLists.txt  README.md  platformio.ini  sdkconfig  sdkconfig.defaults
main/: CMakeLists.txt  Diagrams.drawio  idf_component.yml  main.c  state_machine_com.c  state_machine_usb.c  state_machines.h
main/Tools/: Hamming74.c  Hamming74.h  UARTTools.c  UARTTools.h  USBDeviceTools.c  USBDeviceTools.h  USBHostTools.c  USBHostTools.h
output documents/: ELEC5550 PROJECT GANTT CHART.xlsx
src/: keystrokes.cpp  main.cpp
